# TinyIM

./: .gitignore  LICENSE  README.md
Code/: TotalBuild.sh
Code/Client/ClientCore_TinyIM/: Build.sh  CMakeLists.txt  build32.bat
Code/Client/ClientCore_TinyIM/ClientCore/: CClientSess.cpp  CClientSess.h  CFileUtil.cpp  CFileUtil.h  CHttpServer.cpp  CHttpServer.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CMsgPersistentUtil.cpp  CMsgPersistentUtil.h  CServerSess.cpp  CServerSess.h  CUdpClient.cpp  CUdpClient.h  MainFunc.cpp  MainFunc.h  MediumServer.cpp
Code/Client/ClientCore_TinyIM/HTTP_Test/: CMakeLists.txt  HttpFunction.cpp  HttpFunction.h  Http_Test.cpp  UserRegister_Test.cpp  main.cpp
Code/Client/ClientCore_TinyIM/IMRobot/: CImRobot.cpp  CImRobot.h  CMakeLists.txt  main.cpp
Code/Client/ClientCore_TinyIM/UnitTest/: CFileUtil_Test.cpp  CMakeLists.txt  MsgSaveToDB_Test.cpp  TransBaseMessage_Test.cpp  main.cpp
Code/Client/ClientCore_TinyIM/include/common/: CommonConfig.h  CommonFunction.cpp  CommonFunction.h  IUProtocolData.cpp  IUProtocolData.h  Log.h  Log.h.bak  UiMsg.h  asio_common.h
Code/Client/ClientUI/: Build.bat  CMakeLists.txt
Code/Client/ClientUI/CatchScreen/: CatchScreenDlg.cpp  resource.h
Code/Client/ClientUI/Source/: AboutDlg.cpp  AboutDlg.h  AddFriendConfirmDlg.cpp  AddFriendConfirmDlg.h  BuddyChatDlg.cpp  BuddyChatDlg.h  BuddyInfoDlg.cpp  BuddyInfoDlg.h  BuddyInfoFloatWnd.cpp  BuddyInfoFloatWnd.h  BuddyListCtrl.cpp  BuddyListCtrl.h  BuddyListCtrlEx.cpp  BuddyListCtrlEx.h  Buffer.h  CRegisterSkinHyperLink.cpp  CRegisterSkinHyperLink.h  CascadeWinManager.cpp  CascadeWinManager.h  ChangePicHead.cpp  ChangePicHead.h  ChangePicHeadDlg.cpp  ChangePicHeadDlg.h  ChatDlgCommon.cpp  ChatDlgCommon.h  ChatTabMgr.cpp  ChatTabMgr.h  ClosePromptDlg.cpp  ClosePromptDlg.h  Crash.cpp  CreateNewGroupDlg.cpp  CreateNewGroupDlg.h  CriticalSection.cpp  CriticalSection.h  CustomMsgDef.h  DstVersion.h  EncodingUtil.cpp  EncodingUtil.h  FaceCtrl.cpp  FaceCtrl.h  (+130 more)
Code/Client/ClientUI/Source/Proto/: Proto.cpp  Proto.h
Code/Client/ClientUI/Source/RemoteDesktop/: CursorInfo.h  ScreenManager.cpp  ScreenManager.h  ScreenSpy.cpp  ScreenSpy.h  until.cpp  until.h
Code/Client/ClientUI/Source/SkinLib/: SkinButton.cpp  SkinButton.h  SkinComboBox.cpp  SkinComboBox.h  SkinDialog.cpp  SkinDialog.h  SkinEdit.cpp  SkinEdit.h  SkinHyperLink.cpp  SkinHyperLink.h  SkinLib.h  SkinListCtrl.cpp  SkinListCtrl.h  SkinManager.cpp  SkinManager.h  SkinMenu.cpp  SkinMenu.h  SkinMessageBox.cpp  SkinMessageBox.h  SkinPictureBox.cpp  SkinPictureBox.h  SkinRichEdit.cpp  SkinRichEdit.h  SkinScrollBar.cpp  SkinScrollBar.h  SkinStatic.cpp  SkinStatic.h  SkinTabCtrl.cpp  SkinTabCtrl.h  SkinToolBar.cpp  SkinToolBar.h  SkinWebBrowser.cpp  SkinWebBrowser.h
Code/Client/ClientUI/Source/asioNet/: CClientSess.cpp  CClientSess.h  CSessManager.cpp  CSessManager.h  SourceServerMain.cpp
Code/Client/ClientUI/Source/asioNet/include/DaemonApp/: DaemonSvcApp.cpp  DaemonSvcApp.h
Code/Client/ClientUI/Source/asioNet/include/common/: CommonFunction.h  Log.h  asio_common.h
Code/Client/ClientUI/Source/net/: FileMsg.h  IUProtocolData.cpp  IUProtocolData.h  Msg.h  protocolstream.cpp  protocolstream.h
Code/Client/ClientUI/UI_RES/: ClientCore.cfg
Code/Client/ClientUI/UI_RES/config/: flamingo.ini  userconfig.ini
Code/CommonFunction/: CFileUtil.cpp  CFileUtil.h  md5.cpp
Code/Server/ChatServer/: CMakeLists.txt  build32.bat
Code/Server/ChatServer/MediumServer/: CClientSess.cpp  CClientSess.h  CClientSessManager.cpp  CClientSessManager.h  CMakeLists.txt  CMediumServer.cpp  CMediumServer.h  CMySqlConnect.cpp  CServerSess.cpp  CServerSess.h  CTimeUtil.cpp  CTimeUtil.h  CUdpServer.cpp  CUdpServer.h  EncodingUtil.cpp  EncodingUtil.h  MediumServer.cpp
Code/Server/ChatServer/UnitTest/: CMakeLists.txt  DataBaseCmd_Test.cpp  TransBaseMessage_Test.cpp  fmtLearn.cpp  main.cpp
Code/Server/ChatServer/include/common/: CommonConfig.h  CommonFunction.h  Log.h  planform.h
Code/Server/ChatServer/include/mysql/: CMySqlConnect.h  CMysqlStruct.h
Code/Server/DB_SQL/: imdev.sql
Code/msgStruct/: CommonDef.cpp  CommonDef.h  CommonMsg.cpp  CommonMsg.h
